--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <a
             href="./index.html"
             style="text-decoration: none; color: whitesmoke"
-            >Contact Us</a
+            >Contact Me</a
           >
           <a
-            href="./index.html"
+            href="./pages/blog.html"
             style="text-decoration: none; color: whitesmoke"
             >Blog</a
           >
@@ -40,45 +40,45 @@
             Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
             pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
             luctus et ultrices posuere cubilia curae
-            <sub><a href="./blog.html">Read More ...</a></sub>
+            <sub><a href="./pages/blog.html">Read More ...</a></sub>
           </div>
         </div>
         <div class="card">
           <img class="card-image" alt="Blog Image" src="./assets/2.jpg" />
           <div class="card-content fz-sm">
-            <span class="card-title fz-m">First Blog</span>
+            <span class="card-title fz-m">Second Blog</span>
             Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
             Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
             pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
             luctus et ultrices posuere cubilia curae
-            <sub><a href="./blog.html">Read More ...</a></sub>
+            <sub><a href="./pages/blog-two.html">Read More ...</a></sub>
           </div>
         </div>
         <div class="card">
           <img class="card-image" alt="Blog Image" src="./assets/3.jpg" />
           <div class="card-content fz-sm">
-            <span class="card-title fz-m">First Blog</span>
+            <span class="card-title fz-m">Third Blog</span>
             Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
             Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
             pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
             luctus et ultrices posuere cubilia curae
-            <sub><a href="./blog.html">Read More ...</a></sub>
+            <sub><a href="./pages/blog-three.html">Read More ...</a></sub>
           </div>
         </div>
         <div class="card">
           <img class="card-image" alt="Blog Image" src="./assets/2.jpg" />
           <div class="card-content fz-sm">
-            <span class="card-title fz-m">First Blog</span>
+            <span class="card-title fz-m">Second Blog</span>
             Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
             Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
             pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
             luctus et ultrices posuere cubilia curae
-            <sub><a href="./blog.html">Read More ...</a></sub>
+            <sub><a href="./pages/blog-two.html">Read More ...</a></sub>
           </div>
         </div>
       </div>
       <div class="footer">
-        <div class="fz-m">Follow Us on</div>
+        <div class="fz-m">Follow Me on</div>
         <div class="social-media">
           <a href="https://www.facebook.com"
             ><img
