--- a/index.html
+++ b/index.html
@@ -1,105 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <title>Title</title>
-    <link rel="stylesheet" href="./styles/style.css" />
-  </head>
-  <body>
-    <div class="grid page-wrapper h-100">
-      <div class="header">
+    <link rel="stylesheet" href="./styles/style.css"/>
+</head>
+<body>
+<div class="grid page-wrapper h-100">
+    <div class="header">
         <div class="header-title">
-          <span class="fz-lg">My Blog Project</span>
-          <span class="fz-sm">Welcome to my Blog!</span>
+            <span class="fz-lg">My Blog Project</span>
+            <span class="fz-sm">Welcome to my Blog!</span>
         </div>
         <div class="header-routes">
-          <a
-            href="./index.html"
-            style="text-decoration: none; color: whitesmoke"
+            <a
+                    href="./index.html"
+                    style="text-decoration: none; color: whitesmoke"
             >Home</a
-          >
-          <a
-            href="./index.html"
-            style="text-decoration: none; color: whitesmoke"
+            >
+            <a
+                    href="./index.html"
+                    style="text-decoration: none; color: whitesmoke"
             >Contact Me</a
-          >
-          <a
-            href="./pages/blog.html"
-            style="text-decoration: none; color: whitesmoke"
+            >
+            <a
+                    href="./pages/blog.html"
+                    style="text-decoration: none; color: whitesmoke"
             >Blog</a
-          >
+            >
         </div>
-      </div>
+    </div>
 
-      <div class="content h-100">
+    <div class="content h-100">
         <div class="card">
-          <img class="card-image" alt="Blog Image" src="./assets/1.jpg" />
-          <div class="card-content fz-sm">
-            <span class="card-title fz-m">First Blog</span>
-            Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
-            Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
-            pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
-            luctus et ultrices posuere cubilia curae
-            <sub><a href="./pages/blog.html">Read More ...</a></sub>
-          </div>
+            <img class="card-image" alt="Blog Image" src="./assets/1.jpg"/>
+            <figcaption>Blog image</figcaption>
+            <div class="card-content fz-sm">
+                <span class="card-title fz-m">First Blog</span>
+                Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
+                Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
+                pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
+                luctus et ultrices posuere cubilia curae
+                <sub><a href="./pages/blog.html">Read More ...</a></sub>
+            </div>
         </div>
         <div class="card">
-          <img class="card-image" alt="Blog Image" src="./assets/2.jpg" />
-          <div class="card-content fz-sm">
-            <span class="card-title fz-m">Second Blog</span>
-            Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
-            Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
-            pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
-            luctus et ultrices posuere cubilia curae
-            <sub><a href="./pages/blog-two.html">Read More ...</a></sub>
-          </div>
+            <img class="card-image" alt="Blog Image" src="./assets/2.jpg"/>
+            <figcaption>Blog image</figcaption>
+            <div class="card-content fz-sm">
+                <span class="card-title fz-m">Second Blog</span>
+                Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
+                Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
+                pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
+                luctus et ultrices posuere cubilia curae
+                <sub><a href="./pages/blog-two.html">Read More ...</a></sub>
+            </div>
         </div>
         <div class="card">
-          <img class="card-image" alt="Blog Image" src="./assets/3.jpg" />
-          <div class="card-content fz-sm">
-            <span class="card-title fz-m">Third Blog</span>
-            Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
-            Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
-            pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
-            luctus et ultrices posuere cubilia curae
-            <sub><a href="./pages/blog-three.html">Read More ...</a></sub>
-          </div>
+            <img class="card-image" alt="Blog Image" src="./assets/3.jpg"/>
+            <figcaption>Blog image</figcaption>
+            <div class="card-content fz-sm">
+                <span class="card-title fz-m">Third Blog</span>
+                Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
+                Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
+                pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
+                luctus et ultrices posuere cubilia curae
+                <sub><a href="./pages/blog-three.html">Read More ...</a></sub>
+            </div>
         </div>
         <div class="card">
-          <img class="card-image" alt="Blog Image" src="./assets/2.jpg" />
-          <div class="card-content fz-sm">
-            <span class="card-title fz-m">Second Blog</span>
-            Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
-            Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
-            pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
-            luctus et ultrices posuere cubilia curae
-            <sub><a href="./pages/blog-two.html">Read More ...</a></sub>
-          </div>
+            <img class="card-image" alt="Blog Image" src="./assets/2.jpg"/>
+            <figcaption>Blog image</figcaption>
+            <div class="card-content fz-sm">
+                <span class="card-title fz-m">Second Blog</span>
+                Sed nulla magna, fringilla sit amet laoreet at, imperdiet at tellus.
+                Phasellus ac porttitor tellus, non vehicula mauris. Duis dignissim
+                pellentesque dapibus. Vestibulum ante ipsum primis in faucibus orci
+                luctus et ultrices posuere cubilia curae
+                <sub><a href="./pages/blog-two.html">Read More ...</a></sub>
+            </div>
         </div>
-      </div>
-      <div class="footer">
+    </div>
+    <div class="footer">
         <div class="fz-m">Follow Me on</div>
         <div class="social-media">
-          <a href="https://www.facebook.com"
+            <a href="https://www.facebook.com"
             ><img
-              class="logo"
-              alt="social media logo"
-              src="./assets/fb-logo.png"
-          /></a>
-          <a href="https://www.x.com">
-            <img
-              class="logo"
-              alt="social media logo"
-              src="./assets/x-logo.webp"
-          /></a>
-          <a href="https://www.telegram.com">
-            <img
-              class="logo"
-              alt="social media logo"
-              src="./assets/telegram-512.webp"
-          /></a>
+                    class="logo"
+                    alt="social media logo"
+                    src="./assets/fb-logo.png"
+            /></a>
+            <a href="https://www.x.com">
+                <img
+                        class="logo"
+                        alt="social media logo"
+                        src="./assets/x-logo.webp"
+                /></a>
+            <a href="https://www.telegram.com">
+                <img
+                        class="logo"
+                        alt="social media logo"
+                        src="./assets/telegram-512.webp"
+                /></a>
         </div>
-      </div>
     </div>
-  </body>
+</div>
+</body>
 </html>
