--- a/pages/blog.html
+++ b/pages/blog.html
@@ -35,13 +35,28 @@
         <div class="container">
           <div class="blog-post">
             <h1>Blog 1 Title</h1>
-            <h4>Posted on <b>May 28, 2024</b> by Aya</h4>
+
+            <div class="author">
+              <img src="../assets/author.jpg" alt="image for the author" />
+              <figcaption>Author</figcaption>
+              <div class="author-info">
+                <span class="author-name"><b>Aya Marmash</b></span>
+                <span class="author-title">Frontend Developer</span>
+                <span class="author-title">Udacity</span>
+                <p>
+                  Bio: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Pellentesque imperdiet suscipit lorem, nec varius libero
+                  consequat at. Integer consecteturLorem ipsum dolor sit amet,
+                  consectetur
+                </p>
+              </div>
+            </div>
+
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Pellentesque imperdiet suscipit lorem, nec varius libero consequat
               at. Integer consectetur...
             </p>
-            <img alt="">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Pellentesque imperdiet suscipit lorem, nec varius libero consequat
