--- a/pages/blog-two.html
+++ b/pages/blog-two.html
@@ -1,87 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <title>Title</title>
-    <link rel="stylesheet" href="../styles/style.css" />
-  </head>
-  <body>
-    <div class="grid page-wrapper h-100">
-      <div class="header">
+    <link rel="stylesheet" href="../styles/style.css"/>
+</head>
+<body>
+<div class="grid page-wrapper h-100">
+    <div class="header">
         <div class="header-title">
-          <span class="fz-lg">My Blog Project</span>
-          <span class="fz-sm">Welcome to my Blog!</span>
+            <span class="fz-lg">My Blog Project</span>
+            <span class="fz-sm">Welcome to my Blog!</span>
         </div>
         <div class="header-routes">
-          <a
-            href="../index.html"
-            style="text-decoration: none; color: whitesmoke"
+            <a
+                    href="../index.html"
+                    style="text-decoration: none; color: whitesmoke"
             >Home</a
-          >
-          <a
-            href="../index.html"
-            style="text-decoration: none; color: whitesmoke"
+            >
+            <a
+                    href="../index.html"
+                    style="text-decoration: none; color: whitesmoke"
             >Contact Me</a
-          >
-          <a
-            href="./pages/blog.html"
-            style="text-decoration: none; color: whitesmoke"
+            >
+            <a
+                    href="./pages/blog.html"
+                    style="text-decoration: none; color: whitesmoke"
             >Blog</a
-          >
+            >
         </div>
-      </div>
+    </div>
 
-      <div class="content h-100">
+    <div class="content h-100">
         <div class="container">
-          <div class="blog-post">
-            <h1>Blog 2 Title</h1>
-            <h4>Posted on <b>May 28, 2024</b> by Aya</h4>
-            <div class="blog-grid">
-              <p class="blog-1">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Pellentesque imperdiet suscipit lorem, nec varius libero
-                consequat at. Integer consectetur...
-              </p>
-              <img class="image" alt="" src="../assets/2.jpg" />
-              <p class="blog-2">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Pellentesque imperdiet suscipit lorem, nec varius libero
-                consequat at. Integer consecteturLorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Pellentesque imperdiet suscipit
-                lorem, nec varius libero consequat at. Integer consecteturLorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
-                imperdiet suscipit lorem, nec varius libero consequat at.
-                Integer consecteturLorem ipsum dolor sit amet, consectetur
-                adipiscing elit. Pellentesque imperdiet suscipit lorem, nec
-                varius libero consequat at. Integer consectetur
-              </p>
+            <div class="blog-post">
+                <h1>Blog 2 Title</h1>
+                <div class="author">
+                    <img src="../assets/author.jpg" alt="image for the author" />
+                    <figcaption>Author</figcaption>
+                    <div class="author-info">
+                      <span class="author-name"><b>Aya Marmash</b></span>
+                      <span class="author-title">Frontend Developer</span>
+                      <span class="author-title">Udacity</span>
+                      <p>
+                        Bio: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Pellentesque imperdiet suscipit lorem, nec varius libero
+                        consequat at. Integer consecteturLorem ipsum dolor sit amet,
+                        consectetur
+                      </p>
+                    </div>
+                  </div>
+      
+                <div class="blog-grid">
+                    <p class="blog-1">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Pellentesque imperdiet suscipit lorem, nec varius libero
+                        consequat at. Integer consectetur...
+                    </p>
+                    <img class="image" alt="" src="../assets/2.jpg"/>
+                    <figcaption>Blog</figcaption>
+                    <button><a href="../index.html">Back</a></button>
+                    <p class="blog-2">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Pellentesque imperdiet suscipit lorem, nec varius libero
+                        consequat at. Integer consecteturLorem ipsum dolor sit amet,
+                        consectetur adipiscing elit. Pellentesque imperdiet suscipit
+                        lorem, nec varius libero consequat at. Integer consecteturLorem
+                        ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+                        imperdiet suscipit lorem, nec varius libero consequat at.
+                        Integer consecteturLorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Pellentesque imperdiet suscipit lorem, nec
+                        varius libero consequat at. Integer consectetur
+                    </p>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-      <div class="footer">
+    </div>
+    <div class="footer">
         <div class="fz-m">Follow Me on</div>
         <div class="social-media">
-          <a href="https://www.facebook.com"
+            <a href="https://www.facebook.com"
             ><img
-              class="logo"
-              alt="social media logo"
-              src="../assets/fb-logo.png"
-          /></a>
-          <a href="https://www.x.com">
-            <img
-              class="logo"
-              alt="social media logo"
-              src="../assets/x-logo.webp"
-          /></a>
-          <a href="https://www.telegram.com">
-            <img
-              class="logo"
-              alt="social media logo"
-              src="../assets/telegram-512.webp"
-          /></a>
+                    class="logo"
+                    alt="social media logo"
+                    src="../assets/fb-logo.png"
+            /></a>
+            <a href="https://www.x.com">
+                <img
+                        class="logo"
+                        alt="social media logo"
+                        src="../assets/x-logo.webp"
+                /></a>
+            <a href="https://www.telegram.com">
+                <img
+                        class="logo"
+                        alt="social media logo"
+                        src="../assets/telegram-512.webp"
+                /></a>
         </div>
-      </div>
     </div>
-  </body>
+</div>
+</body>
 </html>
